--- a/index.html
+++ b/index.html
@@ -27,7 +27,25 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-    <script src="script.js"></script>
+    <script>
+    function onSignIn(googleUser) {
+    var profile = googleUser.getBasicProfile();
+    $("name").text(profile.getName());
+    $("email").text(profile.getEmail());
+    $("#image").attr('src',profile.getImageUrl());
+    $(".data").css("display","block");
+    $(".g-signin2").css("display","none");    
+}
+
+function signOut() {
+    var auth2 = gapi.auth2.getAuthInstance();
+    auth2.signOut().then(function () {
+      alert("You have been Successfully Signout");
+        $(".g-signin2").css("display","block");
+        $(".data").css("display","none");
+    });
+  }
+    </script>
 
 </body>
 
