--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <title>Martix-Techno</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="loginpage1.css">
+    <style>
+        .g-signin2
+            {
+                position: absolute;
+                top:50%;
+                left: 50%;
+                margin-top: -50px;
+                margin-left: -50px;
+            }
+    </style>
 </head>
 <body>
     <h2 class="alert alert-primary">sigin using js</h2>
