--- a/index.html
+++ b/index.html
@@ -7,16 +7,7 @@
     <title>Martix-Techno</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <style>
-        .g-signin2
-            {
-                position: absolute;
-                top:50%;
-                left: 50%;
-                margin-top: -50px;
-                margin-left: -50px;
-            }
-    </style>
+    <link rel="stylesheet" href="loginpage1.css">
 </head>
 <body>
     <h2 class="alert alert-primary">sigin using js</h2>
@@ -35,5 +26,6 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script src="script.js"></script>
     </body>
 </html>
